--- a/index.html
+++ b/index.html
@@ -247,9 +247,9 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item"><a class="nav-link active" aria-current="page" href="#">Home</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#">About Us</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#">Contact</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#">Privacy Policy</a></li>
+                    <li class="nav-item"><a class="nav-link" href="https://ingsha09.github.io/Adranalyzer/about-us.html">About Us</a></li>
+                    <li class="nav-item"><a class="nav-link" href="https://ingsha09.github.io/Adranalyzer/contact.html">Contact</a></li>
+                    <li class="nav-item"><a class="nav-link" href="https://ingsha09.github.io/Adranalyzer/privacy-policy.html">Privacy Policy</a></li>
                 </ul>
             </div>
         </div>
