--- a/about-us.html
+++ b/about-us.html
@@ -86,10 +86,10 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
-                    <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
-                    <li class="nav-item"><a class="nav-link active" aria-current="page" href="about-us.html">About Us</a></li>
-                    <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
-                    <li class="nav-item"><a class="nav-link" href="privacy-policy.html">Privacy Policy</a></li>
+                    <li class="nav-item"><a class="nav-link" href="https://ingsha09.github.io/Adranalyzer/">Home</a></li>
+                    <li class="nav-item"><a class="nav-link active" aria-current="page" href="https://ingsha09.github.io/Adranalyzer/about-us.html">About Us</a></li>
+                    <li class="nav-item"><a class="nav-link" href="https://ingsha09.github.io/Adranalyzer/contact.html">Contact</a></li>
+                    <li class="nav-item"><a class="nav-link" href="https://ingsha09.github.io/Adranalyzer/privacy-policy.html">Privacy Policy</a></li>
                 </ul>
             </div>
         </div>
