--- a/index.html
+++ b/index.html
@@ -379,7 +379,7 @@
                     throw new Error(data.error || `Analysis failed with status ${response.status}.`);
                 }
                 
-                resultsContainer.style.display = 'flex';
+                resultsContainer.style.display = '';
                 
                 const categoryIcons = {
                     'Automated Technical Checks': 'bx bx-cog',
